<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tipcalculator.TipActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/totalBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:ems="10"
        android:hint="@string/bill_price" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/totalTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fifteenPercent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:text="@string/total_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/tenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalTip"
        android:layout_alignLeft="@+id/totalBill"
        android:onClick="calculateTip"
        android:text="@string/ten_percent" />

    <Button
        android:id="@+id/twentyPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/totalTip"
        android:layout_alignRight="@+id/totalBill"
        android:onClick="calculateTip"
        android:text="@string/twenty_percent" />

    <Button
        android:id="@+id/fifteenPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalBill"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:onClick="calculateTip"
        android:text="@string/fifteen_percent" />

</RelativeLayout>
